Fix: Fix CreateLessonForStudents